# c-project-template

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  config.cmake  flake.nix  generate_cc.sh
.github/workflows/: ci.yml
cmake/: config.cmake  libraries.cmake  overrides.cmake  setup.cmake  variables.cmake
cmake/templates/: Makefile
inc/: greeting.h
include/: greeting.h
src/: greeting.c  main.c
src/utils/: sum.c  sum.h  sum.test.c
test/: test_utils.c  test_utils.h
test/utils/: sin.test.c  sum.test.c
